Update Math 28 link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <br>
                 <div class="categorytitle">Acads</div>
                 <div class="categorycontent">
-                    <a href="file:///home/paula/Documents/Notes/math28syllabus.pdf" target="__blank">Math 28</a>
+                    <a href="https://drive.google.com/file/d/1wny7k4hIkqBnTrX7BBXW99Ptc04LkrRb/view?usp=sharing" target="__blank">Math 28</a>
                 </div>
                     <br>
                 <br>
