Update Math 28 link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 <br>
                 <div class="categorytitle">Acads</div>
                 <div class="categorycontent">
-                    <a href="https://drive.google.com/file/d/1wny7k4hIkqBnTrX7BBXW99Ptc04LkrRb/view?usp=sharing" target="__blank">Math 28</a>
+                    <a href="https://drive.google.com/file/d/1wny7k4hIkqBnTrX7BBXW99Ptc04LkrRb/view?usp=sharing" target="__blank">Math 28</a><br>s
+                    <a href="https://docs.google.com/spreadsheets/d/1O9oy32zKAQeJvyWYA5yX4-dKVQML7wlGoOZCvKRSVO0/edit?gid=0#gid=0" target="__blank">Plan of study</a>
                 </div>
                     <br>
                 <br>
