final link + goals update before I play Cities Skylines

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <br>
                 <div class="categorytitle">Acads</div>
                 <div class="categorycontent">
-                    <a href="https://drive.google.com/file/d/1wny7k4hIkqBnTrX7BBXW99Ptc04LkrRb/view?usp=sharing" target="__blank">Math 28</a><br>s
+                    <a href="https://drive.google.com/file/d/1wny7k4hIkqBnTrX7BBXW99Ptc04LkrRb/view?usp=sharing" target="__blank">Math 28</a><br>
                     <a href="https://docs.google.com/spreadsheets/d/1O9oy32zKAQeJvyWYA5yX4-dKVQML7wlGoOZCvKRSVO0/edit?gid=0#gid=0" target="__blank">Plan of study</a>
                 </div>
                     <br>
@@ -50,8 +50,19 @@
     <div class="pixeloverlay"></div>
     <div class="vignette"></div>
 
-<!-- JUNE CALENDAR -->
+<!--ACAD GOALS-->
+<div class="goals">
+    <div class="categorytitle" id="goals-title">Goals</div>
+    <ol>
+        <li>Study Phys 101</li>
+        <li>Finish KA AP Calc</li>
+        <li>Study Math 28</li>
+    </ol>
+    <div class="vignette"></div>
+</div>
 
+<!-- JUNE CALENDAR -->
+<!-- 
 <div class="calendar-container" id="calendar-may">    
     <div class="calendar">
     <div class="month">      
@@ -122,7 +133,7 @@
 </div>
 
 <!-- JUNE CALENDAR -->
-
+<!-- 
 <div class="calendar-container" id="calendar-june">    
     <div class="calendar">
     <div class="month">      
@@ -217,8 +228,7 @@
     <li>31</li>
     </ul>
     </div>
-</div>
-
+</div> -->
 <!-- <div class="calendar-container" id="calendar-june">    
     <div class="calendar">
     <div class="month">      
